--- a/ECommerceWebshop/Views/Shared/_Layout.cshtml
+++ b/ECommerceWebshop/Views/Shared/_Layout.cshtml
@@ -14,10 +14,10 @@
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-gradient fixed-top shadow">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark fixed-top shadow">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="bi bi-shop-window"></i> ShopBE
+                    <i class="bi bi-shop-window"></i> ECommerce Webshop
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,17 +26,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light hover-link" asp-area="" asp-controller="Home" asp-action="Index">
+                            <a class="nav-link hover-link" asp-area="" asp-controller="Home" asp-action="Index">
                                 <i class="bi bi-house"></i> Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light hover-link" asp-area="" asp-controller="Product" asp-action="Index">
+                            <a class="nav-link hover-link" asp-area="" asp-controller="Product" asp-action="Index">
                                 <i class="bi bi-grid"></i> Producten
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light hover-link" asp-area="" asp-controller="Cart" asp-action="Index">
+                            <a class="nav-link hover-link" asp-area="" asp-controller="Cart" asp-action="Index">
                                 <i class="bi bi-cart3"></i> Winkelwagen
                                 <span class="badge bg-warning text-dark rounded-pill" id="cartCount">0</span>
                             </a>
@@ -103,9 +103,9 @@
                                 <h3>Contact</h3>
                             </div>
                             <div class="footer-contact">
-                                <p><i class="bi bi-geo-alt"></i> Hoofdstraat 123, 1000 AA Amsterdam, Nederland</p>
-                                <p><i class="bi bi-telephone"></i> +31 (0)20 123 4567</p>
-                                <p><i class="bi bi-envelope"></i> info@shopnl.nl</p>
+                                <p><i class="bi bi-geo-alt"></i> Nieuwstraat 123, 1000 Brussel, België</p>
+                                <p><i class="bi bi-telephone"></i> +32 (0)48 123 4567</p>
+                                <p><i class="bi bi-envelope"></i> info@shopbe.com</p>
                                 <p><i class="bi bi-clock"></i> Ma-Vr: 9:00 - 18:00, Za: 10:00 - 16:00</p>
                             </div>
                             <div class="subscribe-form">
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                         <div class="copyright-text">
-                            <p>&copy; 2025 ShopNL - Alle rechten voorbehouden</p>
+                            <p>&copy; 2025 ECommerce Webshop - Alle rechten voorbehouden</p>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
