Aangemaakte Shipping Sectie.

--- a/ECommerceWebshop/Views/Home/Shipping.cshtml
+++ b/ECommerceWebshop/Views/Home/Shipping.cshtml
@@ -160,7 +160,7 @@
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <div class="border rounded p-3 text-center h-100">
-                        <h5>bpost</h5>
+                        <h5>Bpost</h5>
                         <p class="text-muted mb-0">Onze hoofdpartner voor levering in België</p>
                     </div>
                 </div>
